src/test/ui/use/use-mod/use-mod-4.stderr
error[E0429]: `self` imports are only allowed within a { } list
  --> $DIR/use-mod-4.rs:1:5
   |
LL | use foo::self;
   |     ^^^^^^^^^

error[E0429]: `self` imports are only allowed within a { } list
  --> $DIR/use-mod-4.rs:4:5
   |
LL | use std::mem::self;
   |     ^^^^^^^^^^^^^^

error[E0432]: unresolved import `foo`
  --> $DIR/use-mod-4.rs:1:5
   |
LL | use foo::self;
   |     ^^^ maybe a missing `extern crate foo;`?

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0429, E0432.
For more information about an error, try `rustc --explain E0429`.
